don't hide gap behind warning
closes sk22#899